wooo java 9 update and general fixes